tests/algorithms/transpiler/Go/strings/rabin_karp.error
exit status 1
panic: runtime error: index out of range [2] with length 2

goroutine 1 [running]:
main._index[...](...)
	/workspace/mochi/tests/algorithms/transpiler/Go/strings/rabin_karp.go:75
main.rabin_karp({0x4ddacd, 0x3}, {0x4ddd35, 0x6})
	/workspace/mochi/tests/algorithms/transpiler/Go/strings/rabin_karp.go:143 +0x5bf
main.test_rabin_karp()
	/workspace/mochi/tests/algorithms/transpiler/Go/strings/rabin_karp.go:208 +0xf4
main.main.func1(...)
	/workspace/mochi/tests/algorithms/transpiler/Go/strings/rabin_karp.go:229
main.main()
	/workspace/mochi/tests/algorithms/transpiler/Go/strings/rabin_karp.go:236 +0xa8
exit status 2